@@ -1,4 +1,8 @@
 2012-02-08  Vanessa Gil  <vanessa.gil@artica.es>
+	* godmode/events/custom_events.php
+	* operation/events/events_list.php: Added criticity alert to event view.
+
+2012-02-08  Vanessa Gil  <vanessa.gil@artica.es>
 	* pandoradb.sql
 	  pandoradb.postgreSQL.sql
 	  pandoradb.oracle.sql
